--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/"><%= t(:about) %></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/images"><%= t(:images) %></a>
+          <a class="nav-link" href="/dispositivos">Dispositivos</a>
         </li>
         <% if current_user %>
           <% if current_user.admin? %>
