--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,6 @@
  *
  *= require_tree .
  *= require_self
- *= require leaflet
  */
 
 @import "bootstrap";
@@ -92,3 +91,14 @@ p {
   height: 450px;
 }
 
+
+.leaflet-popup-content-wrapper, .leaflet-popup-tip {
+    background: white none repeat scroll 0 0;
+    box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
+    color: #333;
+    width: 360px;
+}
+
+.leaflet-popup-content-wrapper {
+    text-align: center;
+}
