--- a/app/views/dispositivos/show.html.erb
+++ b/app/views/dispositivos/show.html.erb
@@ -20,6 +20,60 @@
       <dt class="col-sm-3"><strong>Nome:</strong></dt>
       <dd class="col-sm-9"><%= @dispositivo.nome %>&nbsp;</dd>
 
+      <dt class="col-sm-3"><strong>Logradouro:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.logradouro %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Cidade:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.cidade %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>UF:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.uf %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>CEP:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.cep %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Telefone(s):</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.telefone %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>E-mail:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.email %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Política Pública:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.politica_publica %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Tipo de Atendimento:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.tipo_atendimento %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Dias de Atendimento:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.dias_atendimento %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Horário de Atendimento:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.horario_atendimento %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Clientela:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.clientela %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Área de Abragência:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.area_abrangencia %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Dias Para Primeiro Atendimento:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.primeiro_atendimento %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Documentação para Atendimento:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.documentacao_atendimento %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Formas de Pagamento(s):</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.pagamento %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Descrição:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.descricao %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Tipo:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.tipo %>&nbsp;</dd>
+
+      <dt class="col-sm-3"><strong>Sub Tipo:</strong></dt>
+      <dd class="col-sm-9"><%= @dispositivo.subtipo %>&nbsp;</dd>
+
       <dt class="col-sm-3"><strong>Responsável:</strong></dt>
       <dd class="col-sm-9"><%= @dispositivo.user.fullname %>&nbsp;</dd>
     </dl>
