--- a/app/assets/stylesheets/leaflet/leaflet.scss
+++ b/app/assets/stylesheets/leaflet/leaflet.scss
@@ -331,12 +331,12 @@
 	border-radius: 5px;
 	}
 .leaflet-control-layers-toggle {
-	background-image: url(/assets/layers.png);
+	background-image: image-url('layers.png');
 	width: 36px;
 	height: 36px;
 	}
 .leaflet-retina .leaflet-control-layers-toggle {
-	background-image: url(/assets/layers-2x.png);
+	background-image: image-url('layers-2x.png');
 	background-size: 26px 26px;
 	}
 .leaflet-touch .leaflet-control-layers-toggle {
@@ -376,7 +376,7 @@
 
 /* Default icon URLs */
 .leaflet-default-icon-path {
-	background-image: url(/assets/marker-icon.png);
+	background-image: image-url('marker-icon.png');
 	}
 
 
