Pequena correção CSS

--- a/app/assets/stylesheets/leaflet/leaflet.scss
+++ b/app/assets/stylesheets/leaflet/leaflet.scss
@@ -376,7 +376,7 @@
 
 /* Default icon URLs */
 .leaflet-default-icon-path {
-	background-image: image-url('marker-icon.png');
+	background-image: url('/assets/marker-icon.png');
 	}
 
 
