--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@
 
 
    layerTipoControl = L.control.layers().addTo(map);
-   layerSubTipoControl = L.control.layers().addTo(map);
+   // layerSubTipoControl = L.control.layers().addTo(map);
 
    <% if @tipos %>
      <% @tipos.each do |tipo| %>
@@ -44,7 +44,7 @@
 
    <% if @subtipos %>
      <% @subtipos.each do |subtipo| %>
-       layerSubTipoControl.addOverlay(subtipos["<%= subtipo[0] %>"], "<%= subtipo[0] %>");
+       layerTipoControl.addOverlay(subtipos["<%= subtipo[0] %>"], "<%= subtipo[0] %>");
      <% end %>
    <% end %>
   });
