Correção no Caminho para Página Principal

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <body>
 
     <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-      <a class="navbar-brand" href="/">Mapas OBSAM</a>
+      <%= link_to "Mapas OBSAM", root_url, :class => "navbar-brand" %>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <%= link_to 'Dispositivos', dispositivos_url, :class => "nav-link" %>
