--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,6 +25,29 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <%= f.label "Senha", class: "col-sm-2 col-form-label col-form-label-lg" %>
+    <div class="col-sm-10">
+      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= f.label "Confirme a Senha", class: "col-sm-2 col-form-label col-form-label-lg" %>
+    <div class="col-sm-10">
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+    </div>
+  </div>
+
+  <% if current_user.admin? %>
+    <div class="form-group row">
+      <%= f.label "Administrador", class: "col-sm-2 col-form-label col-form-label-lg" %>
+      <div class="col-sm-10">
+        <%= f.check_box :admin, class: "form-control" %>
+      </div>
+    </div>
+  <% end %>
+
   <br/>
   <div class="actions">
     <%= f.submit t(:submit), class: "btn btn-primary" %>
