--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,13 @@
   <li class="nav-item">
     <%= link_to t(:all), users_path, :class => "nav-link active" %>
   </li>
+  <% if user_signed_in? %>
+    <% if current_user.admin? %>
+      <li class="nav-item">
+        <%= link_to t(:new), new_user_path, :class => "nav-link" %>
+      </li>
+    <% end %>
+  <% end %>
 </ul>
 
 <div class="tab-content">
